# city-parse

./: .gitignore  README.md  main.py  output.example.csv  pyproject.toml  raw_data.example.csv
src/city_parse/: __init__.py
src/city_parse/core/: __init__.py  _classify.py  _model.py  _parse.py
src/city_parse/core/model_func/: __init__.py  _base.py  ollama_func.py  openai_func.py
tests/: test_core.py  test_ollama.py  test_openai.py
