[project]
name = "city-parse"
version = "0.1.0"
description = "利用小参数LLM从文章标题里提取城市名称"
readme = "README.md"
authors = [
    { name = "SongTan", email = "sepinetam@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "ollama>=0.6.0",
    "openai>=2.6.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[project.scripts]
city-parse = "city_parse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
