[project]
name = "city-parse"
version = "0.1.0"
description = "利用小参数LLM从文章标题里提取城市名称"
readme = "README.md"
authors = [
    { name = "SongTan", email = "sepinetam@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "ollama>=0.6.0",
    "openai>=2.6.0",
]

[project.optional-dependencies]
transformer_base = [
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "accelerate>=1.11.0",
]

huggingface = [
    'city-parse[transformer_base]',
    "huggingface_hub>=0.20.0",
]

modelscope = [
    'city-parse[transformer_base]',
    "modelscope>=1.8.0",
]

all = [
    "city-parse[huggingface]",
    "city-parse[modelscope]",
]

[project.scripts]
city-parse = "city_parse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
